# Nerve

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  nerve.h  nerve_discover.h
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  pages.yml
docs/: Doxyfile  REFERENCES.md  mathematics.dox
docs/latex/: nerve_manual.tex  nerve_refs.bib
examples/: 01_xor.c  02_sine.c  03_iris.c  04_ctypes_demo.py  05_regression.c  06_dropout.c  07_spiral.c  08_model_io.c  09_predictive_maintenance.c  10_snake_ai.c  11_pong_ai.c  12_flappy_ai.c  CMakeLists.txt  Makefile
npm/: README.md  build.ps1  nerve.d.ts  nerve.js  package.json
ocr/: Makefile  network1.net  network2.net  ocr_train  ocr_train.c  ocr_validate  ocr_validate.c
ocr/lib/: Makefile  fileio.c  ocr.h  sample.c  train.c
site/: index.html
src/: CMakeLists.txt  Makefile  generate_sigma  generate_sigma.c  getopt.h  interpolation.c  nerveNet.h  network.c
studies/autograd/: README.md  demo_mlp.c  gradcheck.c  nerve_grad.h
studies/discover/: README.md  discover.c
studies/embed/: README.md  convert_minilm.py  embed_test.c  nerve_embed.h
studies/geotechnical/: Makefile  README.md  slope_sensitivity.c  slope_stability.c
studies/geotechnical/dataset/: slope_stability_dataset.csv
studies/infer/: README.md  convert.c  convert_hf.py  generate.c  learn.c  nerve_infer.h  quantize.c  search.c
studies/mnist/: Makefile  README.md  download_data.ps1  download_data.sh  export_mlp.c  mnist.c  run_log_softmax.txt  verify_mlp.c
tests/: CMakeLists.txt  Makefile  andnet.spec  benchmark.c  booleannet.spec  copy_network  copy_network.c  create_network  create_network.c  jolt_network  jolt_network.c  parity.spec  parity2.spec  show_network  show_network.c  spec.c  spec.h  test_nerve.c  train_network  train_network.c  xornet.net  xornet.spec
trainingData/: README.md  optdigits.names
web/: README.md  build.ps1  build.sh  index.html  nerve_web.c
web/site/: index.html
wiki/: Algorithms.md  Core-API.md  Easy-API.md  Getting-Started.md  Home.md  _Footer.md  push_wiki.sh  release.md
